Icon Images Updated for Enemies

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /VeggieMadness
+/Algorithm Architects/ProjectSettings/Packages/com.unity.probuilder/Settings.json
